test/files/neg/classtags_contextbound_a.scala
object Test extends App {
  def foo[T] = Array[T]()
  println(foo[Int].getClass)
}